Added FontAwesome 4.1 as a dependency.

--- a/H5PEditor.VerticalTabs.css
+++ b/H5PEditor.VerticalTabs.css
@@ -107,7 +107,7 @@
   height: 14px;
 }
 .h5p-vtab-wrapper .h5p-remove:after {
-  font-family: H5PFontAwesome4;
+  font-family: 'H5PFontAwesome4';
   content: "\f057";
   color: #666;
   font-size: 1.2em;
@@ -132,7 +132,7 @@
   text-decoration: none;
 }
 .h5p-vtab-wrapper .h5p-order:before {
-  font-family: H5PFontAwesome4;
+  font-family: 'H5PFontAwesome4';
   content: "\f0dc";
   color: #666;
 }
