--- a/H5PEditor.VerticalTabs.css
+++ b/H5PEditor.VerticalTabs.css
@@ -7,7 +7,7 @@
 .h5p-vtabs {
   float: left;
   width: 195px;
-  position: relative;  
+  position: relative;
   padding-left: 10px;
   padding-top: 10px;
 }
@@ -42,13 +42,13 @@
   left: 180px;
   top: 0;
   content: " ";
-  width: 0; 
+  width: 0;
   height: 0;
 }
-.h5p-vtab-li.h5p-current:after { 
+.h5p-vtab-li.h5p-current:after {
   border-top: 16px solid transparent;
   border-bottom: 16px solid transparent;
-  border-left: 16px solid #ebebeb;  
+  border-left: 16px solid #f5f5f5;
 }
 .h5p-vtab-li.h5p-current:before {
   top: -1px;
@@ -69,7 +69,7 @@
   display: block;
   white-space: nowrap;
   padding: 6px 4px 7px 26px;
-  background: #f5f5f5;
+  background: #ddd;
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
   border-left: 1px solid #ccc;
@@ -81,7 +81,7 @@
   border-top: 1px solid #ccc;
 }
 .h5p-vtab-li.h5p-current .h5p-vtab-a {
-  background: #ebebeb;
+  background: #f5f5f5;
   border-right: 0;
   margin-right: 15px;
 }
@@ -95,7 +95,7 @@
 }
 .h5p-vtab-a:hover {
   text-decoration: none;
-  background: #ebebeb;
+  background: #f5f5f5;
 }
 .h5p-vtabs > input[type="button"] {
   float: right;
