Use fieldset instead of div for vtab form

--- a/H5PEditor.VerticalTabs.css
+++ b/H5PEditor.VerticalTabs.css
@@ -18,6 +18,8 @@
   position: relative;
   display: none;
   padding: 10px;
+  margin: 0;
+  border: none;
 }
 .h5p-vtab-form.h5p-current {
   display: block;
