--- a/vertical-tabs.css
+++ b/vertical-tabs.css
@@ -4,12 +4,19 @@
   background: #fff;
   margin: 0.25em 0;
 }
+.h5peditor-widget-wrapper .h5p-vtab-wrapper {
+  border: 0;
+  margin: 0;
+}
 .h5p-vtabs {
   float: left;
   width: 195px;
   position: relative;
-  padding-left: 10px;
-  padding-top: 10px;
+  padding-left: 0.5em;
+  padding-top: 0.5em;
+}
+.h5peditor-widget-wrapper .h5p-vtabs {
+  padding: 0;
 }
 .h5p-vtab-forms {
   margin-left: 200px;
@@ -17,9 +24,12 @@
 .h5p-vtab-form {
   position: relative;
   display: none;
-  padding: 10px;
   margin: 0;
   border: none;
+  padding: 0.5em;
+}
+.h5peditor-widget-wrapper .h5p-vtab-form {
+  padding: 0;
 }
 .h5p-vtab-form.h5p-current {
   display: block;
