--- a/vertical-tabs.css
+++ b/vertical-tabs.css
@@ -4,7 +4,7 @@
   background: #fff;
   margin: 0.25em 0;
 }
-.h5peditor-widget-wrapper .h5p-vtab-wrapper {
+.h5peditor-widgets > .h5peditor-widget-wrapper > .h5p-vtab-wrapper {
   border: 0;
   margin: 0;
 }
@@ -15,7 +15,7 @@
   padding-left: 0.5em;
   padding-top: 0.5em;
 }
-.h5peditor-widget-wrapper .h5p-vtabs {
+.h5peditor-widgets > .h5peditor-widget-wrapper > .h5p-vtab-wrapper > .h5p-vtabs {
   padding: 0;
 }
 .h5p-vtab-forms {
@@ -28,7 +28,7 @@
   border: none;
   padding: 0.5em;
 }
-.h5peditor-widget-wrapper .h5p-vtab-form {
+.h5peditor-widgets > .h5peditor-widget-wrapper > .h5p-vtab-wrapper > .h5p-vtab-form {
   padding: 0;
 }
 .h5p-vtab-form.h5p-current {
@@ -57,30 +57,31 @@
   width: 0;
   height: 0;
 }
-.h5p-vtab-li.h5p-current:after {
-  border-top: 14px solid transparent;
-  border-bottom: 15px solid transparent;
-  border-left: 15px solid #f5f5f5;
-}
 .h5p-vtab-li.h5p-current:before {
   top: -1px;
-  border-top: 15px solid transparent;
+  border-top: 16px solid transparent;
   border-bottom: 16px solid transparent;
   border-left: 16px solid #ccc;
 }
-.h5p-vtab-li:first-child:after {
-  top: 1px;
+.h5p-vtab-li.h5p-current:after {
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 14px solid #f5f5f5;
 }
 .h5p-vtab-li:first-child:before {
   top: 0;
 }
+.h5p-vtab-li:first-child:after {
+  top: 1px;
+}
 
 .h5p-vtab-a {
+  line-height: 1.125em;
   color: #333;
   margin-right: 14px;
   display: block;
   white-space: nowrap;
-  padding: 6px 4px 7px 26px;
+  padding: 7px 4px 7px 26px;
   background: #ddd;
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
