--- a/vertical-tabs.css
+++ b/vertical-tabs.css
@@ -46,6 +46,7 @@
   margin: 0;
 }
 .h5p-vtabs .h5p-placeholder {
+  max-height: 30px;
   margin: 0;
   padding: 0;
 }
@@ -53,6 +54,9 @@
   position: relative;
   padding: 0;
   margin: 0;
+}
+.h5p-vtab-li + .h5p-vtab-li.h5p-current {
+  margin-top: -1px;
 }
 .h5p-vtab-li.h5p-current {
   position: relative;
@@ -69,12 +73,12 @@
   top: -1px;
   border-top: 16px solid transparent;
   border-bottom: 16px solid transparent;
-  border-left: 16px solid #ccc;
+  border-left: 16px solid #7fcce0;
 }
 .h5p-vtab-li.h5p-current:after {
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
-  border-left: 14px solid #f5f5f5;
+  border-left: 14px solid #ccebf3;
 }
 .h5p-vtab-li:first-child:before {
   top: 0;
@@ -90,7 +94,7 @@
   display: block;
   white-space: nowrap;
   padding: 7px 4px 7px 26px;
-  background: #ddd;
+  background: #f4f4f4;
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
   border-left: 1px solid #ccc;
@@ -104,7 +108,9 @@
   border-top: 1px solid #ccc;
 }
 .h5p-vtab-li.h5p-current .h5p-vtab-a {
-  background: #f5f5f5;
+  background: #ccebf3;
+  border-color: #7fcce0;
+  border-top: 1px solid #7fcce0;
   border-right: 0;
   margin-right: 15px;
 }
@@ -112,9 +118,6 @@
   background: transparent;
   border-right: 0;
   border-left: 0;
-}
-.h5p-placeholder:last-child > .h5p-vtab-a {
-  border-bottom: 1px solid transparent;
 }
 .h5p-vtab-a:hover {
   text-decoration: none;
@@ -152,13 +155,19 @@
   left: 6px;
   top: 6px;
 }
+.h5p-vtab-li.h5p-current .h5p-order {
+  top: 7px;
+}
+.h5p-vtab-li:first-child.h5p-current .h5p-order {
+  top: 6px;
+}
 .h5p-vtab-wrapper a.h5p-order:hover {
   text-decoration: none;
 }
 .h5p-vtab-wrapper .h5p-order:before {
   font-family: 'H5PFontAwesome4';
   content: "\f0dc";
-  color: #666;
+  color: #999;
 }
 .h5p-vtab-wrapper .h5p-order:hover:before {
   color: #027AC6;
@@ -171,6 +180,14 @@
   border-top: 1px solid #ccc;
   margin-top: -1px;
 }
-.h5p-vtabs .h5p-moving:first-child > .h5p-vtab-a {
+.h5p-vtabs .h5p-moving.h5p-current {
+  margin-top: -1px;
+}
+.h5p-vtabs .h5p-vtab-li:first-child.h5p-moving.h5p-current.
+.h5p-vtabs .h5p-vtab-li:nth-child(2).h5p-moving > .h5p-vtab-a {
+  margin-top: 0;
+}
+.h5p-vtabs .h5p-moving.h5p-current > .h5p-vtab-a {
+  border-top: 1px solid #7fcce0;
   margin-top: 0;
 }
