--- a/vertical-tabs.css
+++ b/vertical-tabs.css
@@ -18,7 +18,7 @@
 }
 .h5p-vtabs {
   float: left;
-  width: 195px;
+  width: 212px;
   position: relative;
   padding-left: 0.5em;
   padding-top: 0.5em;
@@ -27,7 +27,7 @@
   padding: 0;
 }
 .h5p-vtab-forms {
-  margin-left: 203px;
+  margin-left: 217px;
 }
 .h5p-vtab-form {
   position: relative;
@@ -45,177 +45,184 @@
 .h5p-vtab-form > .field {
   margin: 0;
 }
+.h5p-vtab-li,
 .h5p-vtabs .h5p-placeholder {
-  max-height: 30px;
-  margin: 0;
-  padding: 0;
-}
-.h5p-placeholder .h5p-vtab-a {
-  box-sizing: border-box;
-  height: 100%;
-}
-.h5p-placeholder:nth-last-child(2) .h5p-vtab-a {
-  border: none;
-}
-.h5p-vtab-li {
   position: relative;
   padding: 0;
-  margin: 0;
+  margin: 0 0 3px 0;
 }
-.h5p-vtab-li + .h5p-vtab-li.h5p-current {
-  margin-top: -1px;
-}
-.h5p-vtab-li.h5p-current {
-  position: relative;
-  overflow: hidden;
-}
-.h5p-vtab-li.h5p-current:after, .h5p-vtab-li.h5p-current:before {
+.h5p-vtab-li.h5p-current:after,
+.h5p-vtab-li.h5p-current:before {
   position: absolute;
-  left: 180px;
-  top: 0;
+  left: 199px;
   content: " ";
   width: 0;
   height: 0;
 }
 .h5p-vtab-li.h5p-current:before {
   top: -1px;
-  border-top: 16px solid transparent;
-  border-bottom: 16px solid transparent;
-  border-left: 16px solid #7fcce0;
+  border-top: 21px solid transparent;
+  border-bottom: 21px solid transparent;
+  border-left: 13px solid #636164;;
 }
 .h5p-vtab-li.h5p-current:after {
-  border-top: 15px solid transparent;
-  border-bottom: 15px solid transparent;
-  border-left: 14px solid #ccebf3;
-}
-.h5p-vtab-li:first-child:before,
-.h5p-vtab-li:nth-child(2).h5p-moving.h5p-current:before {
-  top: 0;
-}
-.h5p-vtab-li:first-child:after,
-.h5p-vtab-li:nth-child(2).h5p-moving.h5p-current:after {
   top: 1px;
+  border-top: 19px solid transparent;
+  border-bottom: 19px solid transparent;
+  border-left: 12px solid #747275;
 }
-
 .h5p-vtab-a {
-  line-height: 1.125em;
-  color: #333;
-  margin-right: 14px;
-  display: block;
-  white-space: nowrap;
-  padding: 7px 4px 7px 26px;
-  background: #f4f4f4;
-  border-bottom: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  border-left: 1px solid #ccc;
+  border: 1px solid #ccc;
+  background: #fff;
+  height: 38px;
   font-size: 14px;
-  overflow: hidden;
-  cursor: pointer;
-  text-overflow: ellipsis;
+  font-weight: 600;
+  line-height: 38px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding: 0 30px;
+  margin: 0 12px 0 0;
   outline: none;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
-.h5p-vtab-li:first-child .h5p-vtab-a {
-  border-top: 1px solid #ccc;
-}
-.h5p-vtab-li.h5p-current .h5p-vtab-a {
-  background: #ccebf3;
-  border-color: #7fcce0;
-  border-top: 1px solid #7fcce0;
-  border-right: 0;
-  margin-right: 15px;
-}
-.h5p-placeholder > .h5p-vtab-a {
-  background: transparent;
-  border-right: 0;
-  border-left: 0;
-}
+/*
 .h5p-vtab-a:hover {
   text-decoration: none;
   background: #f5f5f5;
+}
+*/
+.h5p-vtab-li.h5p-current .h5p-vtab-a {
+  background: #747275;
+  border: 1px solid #636164;
+  color: #fff;
+}
+.h5p-placeholder > .h5p-vtab-a {
+  background: #e8f2fa;
+  border: dashed 2px #2782d1;
+  height: 36px;
 }
 .h5p-vtabs > button {
   float: right;
   margin: 8px 14px 8px 8px;
 }
-.h5p-vtab-wrapper .h5p-remove {
-  cursor: pointer;
-  width: 14px;
-  height: 14px;
-}
-.h5p-vtab-wrapper .h5p-remove:after {
-  font-family: 'H5PFontAwesome4';
-  content: "\f057";
-  color: #666;
-  font-size: 1.2em;
-}
-.h5p-vtab-wrapper .h5p-remove:hover:after {
-  color: #c33f62;
-}
-.h5p-vtab-wrapper .h5p-remove:hover {
-  text-decoration: none;
-}
-.h5p-vtab-form > .h5p-remove {
-  position: absolute;
-  right: 20px;
-  top: 15px;
-}
-.h5p-vtab-wrapper .h5p-order {
-  position: absolute;
-  box-sizing: border-box;
-  top: 0;
-  width: 20px;
-  height: 30px;
-  padding: 3px 0;
-  cursor: grab;
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
-}
-.h5p-vtab-li.h5p-current .h5p-order {
-  top: 1px;
-}
-.h5p-vtab-li:first-child.h5p-current .h5p-order,
-.h5p-vtab-li:nth-child(2).h5p-moving.h5p-current .h5p-order {
-  top: 0;
-}
-.h5p-vtab-wrapper a.h5p-order:hover {
-  text-decoration: none;
-}
-.h5p-vtab-wrapper .h5p-order:before {
-  margin-left: -4px;
-  font-family: 'H5P';
-  font-size: 1.6em;
-  content: "\e600";
-  color: #999;
-}
-.h5p-vtab-wrapper .h5p-order:hover:before {
-  color: #027AC6;
-}
 .h5p-vtabs .h5p-moving {
   position: absolute;
   z-index: 1;
 }
-.h5p-vtabs .h5p-moving > .h5p-vtab-a,
-.h5p-vtabs .h5p-moving > .h5p-order {
+.h5p-vtabs .h5p-moving > .h5p-vtab-a {
   cursor: grabbing;
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing;
 }
-.h5p-vtabs .h5p-moving > .h5p-vtab-a {
-  border-top: 1px solid #ccc;
-  margin-top: -1px;
+.vtab-order-wrapper {
+  position: absolute;
+  top: 1px;
+  left: 1px;
 }
-.h5p-vtabs .h5p-moving.h5p-current {
-  margin-top: -1px;
+.vtab-order-wrapper > .order-up,
+.vtab-order-wrapper > .order-down {
+  width: 19px;
+  height: 19px;
+  background: #D0D0D1;
+  font-size: 14px;
+  line-height: 19px;
+  cursor: pointer;
+  text-align: center;
 }
-.h5p-vtabs .h5p-vtab-li:first-child.h5p-moving.h5p-current,
-.h5p-vtabs .h5p-vtab-li:nth-child(2).h5p-moving.h5p-current,
-.h5p-vtabs .h5p-vtab-li:nth-child(2) > .h5p-vtab-a {
-  margin-top: 0;
+.vtab-order-wrapper > .order-down {
+  top: auto;
+  bottom: 1px;
 }
-.h5p-vtabs .h5p-moving.h5p-current > .h5p-vtab-a {
-  border-top: 1px solid #7fcce0;
-  margin-top: 0;
+.h5p-current > .vtab-order-wrapper > .order-up,
+.h5p-current > .vtab-order-wrapper > .order-down {
+  background: #636164;
 }
-.h5p-vtabs li:first-child.h5p-placeholder {
-  max-height: 31px;
+.vtab-order-wrapper > .order-up[aria-disabled="false"]:hover,
+.vtab-order-wrapper > .order-down[aria-disabled="false"]:hover {
+  background: #DAD9DA;
+}
+.h5p-current > .vtab-order-wrapper > .order-up[aria-disabled="false"]:hover,
+.h5p-current > .vtab-order-wrapper > .order-down[aria-disabled="false"]:hover {
+  background: #5b595c;
+}
+.vtab-order-wrapper > .order-up:after,
+.vtab-order-wrapper > .order-down:after {
+  font-family: "H5P";
+  content: "\e58e";
+}
+.vtab-order-wrapper > .order-down:after {
+  content: "\e58f"
+}
+.h5p-current > .vtab-order-wrapper > .order-up:after,
+.h5p-current > .vtab-order-wrapper > .order-down:after {
+  color: #FFFFFF;
+}
+.vtab-order-wrapper > .order-up:before,
+.vtab-order-wrapper > .order-down:before {
+  right: auto;
+  left: -5px;
+}
+.vtab-order-wrapper > .order-up[aria-disabled="true"],
+.vtab-order-wrapper > .order-down[aria-disabled="true"] {
+  cursor: default;
+}
+.vtab-order-wrapper > .order-up[aria-disabled="true"]:after,
+.vtab-order-wrapper > .order-down[aria-disabled="true"]:after {
+  opacity: 0.25;
+}
+.vtab-remove-wrapper {
+  position: absolute;
+  top: 1px;
+  right: 12px;
+}
+.vtab-remove-wrapper > .remove {
+  cursor: pointer;
+  width: 1.25em;
+  height: 38px;
+  font-size: 1.75em;
+  text-align: center;
+}
+.vtab-remove-wrapper > .remove:after {
+  font-family: "H5P";
+  content: "\e890";
+  color: #454347;
+  opacity: 0.7;
+  display: inline-block;
+  line-height: 38px;
+}
+.h5p-current > .vtab-remove-wrapper > .remove:after {
+  color: #fff;
+}
+.vtab-remove-wrapper > .remove:hover:after {
+  opacity: 1;
+}
+.vtab-remove-wrapper > .remove:before {
+
+}
+
+.h5peditor-button.add-entity {
+  width: 200px;
+  height: 40px;
+  border: 1px dashed #ccc;
+  color: #a0a0a0;
+  font-weight: 600;
+  font-size: 14px;
+  box-sizing: border-box;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  line-height: 38px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0 5px;
+}
+.h5peditor-button.add-entity:before {
+  font-family: "H5P";
+  content: "\e902";
+  margin-right: 8px;
+  font-weight: 400;
 }
