--- a/vertical-tabs.css
+++ b/vertical-tabs.css
@@ -181,8 +181,10 @@
 .h5peditor-button.add-entity {
   width: 200px;
   height: 40px;
-  border: 1px dashed #ccc;
-  color: #a0a0a0;
+  background: #2579C6;
+  background-image: linear-gradient(#3B87CC 50%, transparent 50%, transparent);
+  border: 1px solid #2074B0;
+  color: #fff;
   font-weight: 600;
   font-size: 14px;
   box-sizing: border-box;
@@ -194,6 +196,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0 5px;
+  border-radius: 3px;
+  margin-top: 5px;
 }
 .h5peditor-button.add-entity:before {
   font-family: "H5P";
