--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,38 +1,30 @@
-$french-gray: #d0d0d1;
-$regent-gray: #828f9d;
-$rolling-stone: #7b8188;
-$shuttle-gray: #57636e;
-$pale-sky: #677786;
-$iron: #D0D3D8;
-$danube: #488ac9;
-$san-marino: #3b71a5;
+// importance colors
+$form-background: #FCFCFC;
+$form-border-color: #d0d0d1;
 
-// general
-$border: $french-gray;
+$form-item-importance-high-background: #2579C6;
+$form-item-importance-high-background-highlight: #3080c9;
+$form-item-importance-high-border-color: #1f67a8;
+$form-item-importance-high-background-hover: #1f67a8;
+$form-item-importance-high-background-hover-highlight: #2a6fac;
+
+// importance medium:
+$form-item-importance-medium-background: #747275;
+$form-item-importance-medium-background-highlight: #7b797c;
+$form-item-importance-medium-border-color: #636164;
+$form-item-importance-medium-background-hover: #636164;
+$form-item-importance-medium-background-hover-highlight: #6b696c;
+
+// importance low:
+$form-item-importance-low-background: #f5f5f5;
+$form-item-importance-low-background-highlight: #eeeeef;
+$form-item-importance-low-border-color: #d0d0d1;
+$form-item-importance-low-background-hover: #deddde;
+$form-item-importance-low-background-hover-highlight: #deddde;
 
 // tabs
 $tabs-width: 212px;
 
-// tab colors
-$tab-border: $border;
-$tab-background: white;
-$tab-order-background: $regent-gray;
-$tab-order-background-hover: darken($tab-order-background, 10%);;
-$tab-button-remove: $rolling-stone;
-
-// active tab colors
-$tab-active-border: $shuttle-gray;
-$tab-active-background: $pale-sky;
-$tab-active-order-background: $shuttle-gray;
-$tab-active-order-background-hover: darken($tab-active-order-background, 10%);
-$tab-active-button-remove: $iron;
-
-//
+// dropzone colors
 $tab-dropzone-border: #2782d1;
 $tab-dropzone-background: #e8f2fa;
-
-// add button
-$button-add-background: $danube;
-$button-add-background-hover: $san-marino;
-$button-add-color: white;
-$button-add-border: darken($button-add-background, 10%);
