--- a/styles/scss/vertical-tabs.scss
+++ b/styles/scss/vertical-tabs.scss
@@ -39,8 +39,8 @@
 }
 
 .h5p-vtab-a {
-  border: 1px solid $tab-border;
-  background: $tab-background;
+  border: 1px solid $form-border-color;
+  background: white;
   height: 38px;
   font-size: 14px;
   font-weight: 600;
@@ -58,8 +58,8 @@
 
 .h5p-vtabs .h5p-vtab-li.h5p-current {
   .h5p-vtab-a {
-    background: $tab-active-background;
-    border: 1px solid $tab-active-border;
+    background: $form-item-importance-medium-background;
+    border: 1px solid $form-item-importance-medium-border-color;
     border-right: 0;
     color: white;
   }
@@ -77,23 +77,23 @@
     top: 0;
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent;
-    border-left: 13px solid $tab-active-border;
+    border-left: 13px solid $form-item-importance-medium-border-color;
   }
 
   &:after {
     top: 1px;
     border-top: 19px solid transparent;
     border-bottom: 19px solid transparent;
-    border-left: 12px solid $tab-active-background;
+    border-left: 12px solid $form-item-importance-medium-background;
   }
 
   > .vtab-order-wrapper {
     > .order-up,
     > .order-down {
-      background: $tab-active-order-background;
+      background: $form-item-importance-medium-border-color;
 
       &[aria-disabled="false"]:hover {
-        background: $tab-active-order-background-hover;
+        background: darken($form-item-importance-medium-border-color, 10%);;
       }
 
       &:after {
@@ -134,14 +134,14 @@
   > .order-down {
     width: 19px;
     height: 19px;
-    background: $tab-order-background;
+    background: $form-border-color;
     font-size: 14px;
     line-height: 19px;
     cursor: pointer;
     text-align: center;
 
     &[aria-disabled="false"]:hover {
-      background-color: $tab-order-background-hover;
+      background-color: darken($form-border-color, 10%);
     }
 
     &:before {
@@ -189,7 +189,7 @@
     &:after {
       font-family: "H5P";
       content: "\e890";
-      color: $tab-button-remove;
+      color: #454347;
       opacity: 0.7;
       display: inline-block;
       line-height: 38px;
@@ -202,15 +202,16 @@
 }
 
 .h5p-current > .vtab-remove-wrapper > .remove:after {
-  color: $tab-active-button-remove;
+  color: #fff;
 }
 
 .h5peditor-button.add-entity {
   width: 200px;
   height: 40px;
-  background-color: $button-add-background;
-  border: 1px solid $button-add-border;
-  color: $button-add-color;
+  background: $form-item-importance-high-background linear-gradient($form-item-importance-high-background-highlight 50%, transparent 50%, transparent);
+
+  border: 1px solid $form-item-importance-high-border-color;
+  color: white;
   font-weight: 600;
   font-size: 14px;
   box-sizing: border-box;
@@ -226,7 +227,7 @@
   margin-top: 5px;
 
   &:hover {
-    background-color: $button-add-background-hover;
+    background: $form-item-importance-high-background-hover linear-gradient($form-item-importance-high-background-hover-highlight 50%, transparent 50%, transparent);
   }
 
   &:before {
@@ -239,12 +240,12 @@
 
 .h5p-vtab-form {
   > .group > .content {
-    border-top: 1px solid $border;
+    border-top: 1px solid $form-background;
     padding: 10px;
   }
 
   > .library {
     padding: 10px;
-    border: 1px solid $border;
+    border: 1px solid $form-background;
   }
 }
