Update css comments

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -1,7 +1,8 @@
-// importance colors
+// general
 $form-background: #FCFCFC;
 $form-border-color: #d0d0d1;
 
+// importance high
 $form-item-importance-high-background: #2579C6;
 $form-item-importance-high-background-highlight: #3080c9;
 $form-item-importance-high-border-color: #1f67a8;
