Prevent overflow from fieldset
HFP-763

--- a/styles/css/vertical-tabs.css
+++ b/styles/css/vertical-tabs.css
@@ -33,7 +33,8 @@
 
 /* line 29, ../scss/vertical-tabs.scss */
 .h5p-vtab-form.h5p-current {
-  display: block;
+  display: table-column;
+  min-width: 0;
 }
 
 /* line 32, ../scss/vertical-tabs.scss */
