--- a/styles/scss/vertical-tabs.scss
+++ b/styles/scss/vertical-tabs.scss
@@ -229,8 +229,10 @@
   &:before {
     font-family: "H5P";
     content: "\e902";
-    margin-right: 8px;
+    margin-right: 6px;
     font-weight: 400;
+    font-size: 1.5em;
+    vertical-align: bottom;
   }
 }
 
