LB-197 update design of tabs

--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -2,6 +2,10 @@
 $form-background: #FCFCFC;
 $form-border-color: #d0d0d1;
 
+$primary: #1F67A8;
+$primary-dark: #174D7D;
+$subtle: #F5F5F5;
+
 // importance high
 $form-item-importance-high-background: #2579C6;
 $form-item-importance-high-background-highlight: #3080c9;
