--- a/styles/scss/vertical-tabs.scss
+++ b/styles/scss/vertical-tabs.scss
@@ -104,7 +104,11 @@
   outline: none;
 
   .is-collapsed & {
+    text-align: center;
     padding: 0 12px;
+    > .h5p-label {
+      display: none;
+    }
   }
 }
 
